@@ -3,7 +3,15 @@ MAINTAINERCLEANFILES = Makefile.in
 includesdir = $(includedir)/openjpeg-$(MAJOR_NR).$(MINOR_NR)
 includes_HEADERS = 
 
-lib_LTLIBRARIES = libopenjpip_server.la libopenjpip_local.la
+lib_LTLIBRARIES =
+
+if WANT_JPIP
+lib_LTLIBRARIES += libopenjpip_local.la
+endif
+
+if WANT_JPIP_SERVER
+lib_LTLIBRARIES += libopenjpip_server.la
+endif
 
 JPIP_SRC = \
 openjpip.c \
@@ -76,8 +84,8 @@ libopenjpip_server_la_CPPFLAGS = \
 @FCGI_CFLAGS@ \
 @LIBCURL_CFLAGS@ \
 -DSERVER
-libopenjpip_server_la_CFLAGS =
-libopenjpip_server_la_LIBADD = @FCGI_LIBS@ @LIBCURL_LIBS@ -lm
+libopenjpip_server_la_CFLAGS = @PTHREAD_CFLAGS@
+libopenjpip_server_la_LIBADD = @FCGI_LIBS@ @LIBCURL_LIBS@ @PTHREAD_LIBS@ -lm
 libopenjpip_server_la_LDFLAGS = -no-undefined -version-info @lt_version@
 libopenjpip_server_la_SOURCES = $(JPIP_SRC)
 
@@ -88,12 +96,13 @@ libopenjpip_local_la_CPPFLAGS = \
 -I$(top_srcdir)/applications/jpip/libopenjpip \
 -I$(top_builddir)/applications/jpip/libopenjpip \
 @LIBCURL_CFLAGS@
-libopenjpip_local_la_CFLAGS =
-libopenjpip_local_la_LIBADD = @LIBCURL_LIBS@ $(top_builddir)/libopenjpeg/libopenjpeg.la -lm
+libopenjpip_local_la_CFLAGS = @PTHREAD_CFLAGS@
+libopenjpip_local_la_LIBADD = @PTHREAD_LIBS@ $(top_builddir)/libopenjpeg/libopenjpeg.la -lm
 libopenjpip_local_la_LDFLAGS = -no-undefined -version-info @lt_version@
 libopenjpip_local_la_SOURCES = $(JPIP_SRC) $(LOCAL_SRC)
 
 install-data-hook:
+if WANT_JPIP_SERVER
 	@echo -e " (LA)\t$(libdir)/libopenjpip_server.la" >> $(top_builddir)/report.txt
 if BUILD_SHARED
 	@( $(call solist_s) ) >> $(top_builddir)/report.txt
@@ -101,12 +110,15 @@ endif
 if BUILD_STATIC
 	@echo -e " (A)\t$(base_s)/$(a_s)" >> $(top_builddir)/report.txt
 endif
+endif
+if WANT_JPIP
 	@echo -e " (LA)\t$(libdir)/libopenjpip_local.la" >> $(top_builddir)/report.txt
 if BUILD_SHARED
 	@( $(call solist_c) ) >> $(top_builddir)/report.txt
 endif
 if BUILD_STATIC
 	@echo -e " (A)\t$(base_c)/$(a_c)" >> $(top_builddir)/report.txt
+endif
 endif
 
 solist_s    = $(foreach f, $(dll_s) $(so_s), echo -e ' $(SO_PREFIX)\t$(base_s)/$(f)' ;)
